--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.8.0
+  http: ^1.3.0
   
 
 dev_dependencies:
