--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.8.0
   http: ^1.3.0
+  mobile_scanner: ^6.0.7
+  permission_handler: ^11.4.0
   
 
 dev_dependencies:
