--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.3.0
   mobile_scanner: ^6.0.7
   permission_handler: ^11.4.0
+  flutter_secure_storage: ^9.2.4
   
 
 dev_dependencies:
