--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   mobile_scanner: ^6.0.7
   permission_handler: ^11.4.0
   flutter_secure_storage: ^9.2.4
+  bcrypt: ^1.1.3
   
 
 dev_dependencies:
